Add ESLint tsconfig and fix formatting
- Add tsconfig.eslint.json for ESLint TypeScript parser
- Update eslint.config.js to use project-based linting
- Apply Prettier formatting fixes

--- a/exercises/03.interfaces-and-classes/README.mdx
+++ b/exercises/03.interfaces-and-classes/README.mdx
@@ -68,8 +68,8 @@ processAnimal(new Duck())
 ```
 
 <callout-info>
-Interfaces enable polymorphism—you can treat different classes the same way
-if they implement the same interface.
+	Interfaces enable polymorphism—you can treat different classes the same way if
+	they implement the same interface.
 </callout-info>
 
 In this exercise, you'll implement interfaces and program to abstractions.
