Position OOP as deliberate choice, add FP contrasts
- Main README: Add FP vs OOP comparison with pragmatism callout
- Classes: Position as one option among many
- Interfaces: Add function vs class comparison
- Polymorphism: Add discriminated unions as FP alternative
- Composition: Include function composition alongside object composition

--- a/exercises/01.classes/README.mdx
+++ b/exercises/01.classes/README.mdx
@@ -43,8 +43,10 @@ class User {
 ```
 
 <callout-info>
-	Classes in TypeScript are similar to classes in Java or C#. If you know those
-	languages, you'll feel right at home.
+	Classes aren't the only way to organize code. Many modern codebases (React,
+	functional libraries) prefer plain objects and functions. This workshop
+	teaches OOP as one powerful option—valuable knowledge even if you primarily
+	use functional patterns.
 </callout-info>
 
 In this exercise, you'll create and use classes.
