Apply formatting fixes

--- a/exercises/06.composition-vs-inheritance/FINISHED.mdx
+++ b/exercises/06.composition-vs-inheritance/FINISHED.mdx
@@ -21,8 +21,9 @@ flexibility.
 
 <callout-info>
 	OOP is a tool, not a religion. Many successful TypeScript codebases use a mix
-	of OOP and functional patterns. Use the right tool for each situation—sometimes
-	that's a class, sometimes it's a function, and often it's a combination.
+	of OOP and functional patterns. Use the right tool for each
+	situation—sometimes that's a class, sometimes it's a function, and often it's
+	a combination.
 </callout-info>
 
 Congratulations! You've completed the Object-Oriented TypeScript workshop! You
