Convert to simple apps with package.json and run callout
- Add package.json to each exercise step (problem and solution)
- Add run callout to problem README.mdx files

--- a/exercises/02.access-modifiers/02.problem.protected/README.mdx
+++ b/exercises/02.access-modifiers/02.problem.protected/README.mdx
@@ -30,3 +30,5 @@ class Derived extends Base {
 ```
 
 📜 [TypeScript Handbook - Protected](https://www.typescriptlang.org/docs/handbook/2/classes.html#protected)
+
+🐨 Once you've completed the exercise, run `node index.ts` in the playground to test your work!
