--- a/exercises/04.inheritance/01.problem.extends/README.mdx
+++ b/exercises/04.inheritance/01.problem.extends/README.mdx
@@ -28,3 +28,5 @@ class Derived extends Base {
 constructor.
 
 📜 [TypeScript Handbook - Inheritance](https://www.typescriptlang.org/docs/handbook/2/classes.html#inheritance)
+
+🐨 Once you've completed the exercise, run `node index.ts` in the playground to test your work!
