--- a/exercises/05.polymorphism/01.problem.substitutability/README.mdx
+++ b/exercises/05.polymorphism/01.problem.substitutability/README.mdx
@@ -26,3 +26,5 @@ playMedia(new VideoFile()) // ✅ Works
 not the specific subclass types.
 
 📜 [TypeScript Handbook - Classes](https://www.typescriptlang.org/docs/handbook/2/classes.html)
+
+🐨 Once you've completed the exercise, run `node index.ts` in the playground to test your work!
