--- a/exercises/06.composition-vs-inheritance/01.problem.when-to-use/README.mdx
+++ b/exercises/06.composition-vs-inheritance/01.problem.when-to-use/README.mdx
@@ -26,3 +26,5 @@ inheritance or composition for different scenarios.
 💰 Think about the relationship: Is it "is-a" or "has-a"?
 
 📜 [Composition over Inheritance](https://en.wikipedia.org/wiki/Composition_over_inheritance)
+
+🐨 Once you've completed the exercise, run `node index.ts` in the playground to test your work!
