--- a/exercises/01.classes/01.problem.class-basics/README.mdx
+++ b/exercises/01.classes/01.problem.class-basics/README.mdx
@@ -26,3 +26,5 @@ class ClassName {
 ```
 
 📜 [TypeScript Handbook - Classes](https://www.typescriptlang.org/docs/handbook/2/classes.html)
+
+🐨 Once you've completed the exercise, run `node index.ts` in the playground to test your work!
