--- a/exercises/01.classes/02.problem.constructors/README.mdx
+++ b/exercises/01.classes/02.problem.constructors/README.mdx
@@ -31,3 +31,5 @@ constructor(public name: string, private age: number = 0) {}
 ```
 
 📜 [TypeScript Handbook - Parameter Properties](https://www.typescriptlang.org/docs/handbook/2/classes.html#parameter-properties)
+
+🐨 Once you've completed the exercise, run `node index.ts` in the playground to test your work!
