--- a/exercises/02.access-modifiers/01.problem.public-private/README.mdx
+++ b/exercises/02.access-modifiers/01.problem.public-private/README.mdx
@@ -21,3 +21,5 @@ class User {
 💰 Remember: Private members can only be accessed within the class methods.
 
 📜 [TypeScript Handbook - Access Modifiers](https://www.typescriptlang.org/docs/handbook/2/classes.html#member-visibility)
+
+🐨 Once you've completed the exercise, run `node index.ts` in the playground to test your work!
