--- a/exercises/FINISHED.mdx
+++ b/exercises/FINISHED.mdx
@@ -6,7 +6,7 @@
 You now understand OOP in TypeScript:
 
 - **Classes** encapsulate data and behavior
-- **Access modifiers** control visibility
+- **Private fields** (`#`) keep implementation details hidden
 - **Interfaces** define contracts classes must fulfill
 - **Inheritance** enables code reuse through extension
 - **Polymorphism** lets code work with different types
