--- a/exercises/01.classes/02.solution.constructors/README.mdx
+++ b/exercises/01.classes/02.solution.constructors/README.mdx
@@ -1,7 +1,6 @@
 # Constructors
 
-👨‍💼 You've used parameter properties and defaults effectively!
+👨‍💼 You've used explicit constructors and defaults effectively!
 
-🦉 Parameter properties are a TypeScript-only feature. They reduce boilerplate
-significantly. Combined with default values, you can create flexible classes
-with minimal code.
+🦉 Explicit fields keep the runtime happy here, and combined with default values
+you can still create flexible classes with minimal code.
