--- a/exercises/01.classes/01.problem.class-basics/README.mdx
+++ b/exercises/01.classes/01.problem.class-basics/README.mdx
@@ -9,20 +9,6 @@ system.
 2. Create a `ShoppingCart` class that holds products
 3. Instantiate and use these classes
 
-💰 Class syntax:
-
-```ts
-class ClassName {
-	field: Type
-
-	constructor(param: Type) {
-		this.field = param
-	}
-
-	method(): ReturnType {
-		return value
-	}
-}
-```
+💰 A class includes fields, a constructor, and methods.
 
 📜 [TypeScript Handbook - Classes](https://www.typescriptlang.org/docs/handbook/2/classes.html)
