--- a/exercises/02.interfaces-and-classes/02.problem.programming-to-abstractions/README.mdx
+++ b/exercises/02.interfaces-and-classes/02.problem.programming-to-abstractions/README.mdx
@@ -11,15 +11,6 @@ concrete classes.
 3. Write a function that processes payments using the interface type
 4. Test with different payment method implementations
 
-💰 Use interfaces as parameter types:
-
-```ts
-function processPayment(method: PaymentMethod, amount: number) {
-	return method.pay(amount) // Works with any PaymentMethod implementation
-}
-```
-
-💰 This makes your code flexible—you can add new payment methods without
-changing the processor code.
+💰 Use the interface type for parameters so different implementations work.
 
 📜 [TypeScript Handbook - Using Interfaces](https://www.typescriptlang.org/docs/handbook/2/objects.html#using-interfaces)
