--- a/exercises/03.inheritance/01.problem.extends/README.mdx
+++ b/exercises/03.inheritance/01.problem.extends/README.mdx
@@ -11,18 +11,7 @@ it with specific shapes like `Circle` and `Rectangle`.
 4. Create a `Rectangle` class that extends `Shape`
 5. Add `width` and `height` fields to `Rectangle`
 
-💰 Inheritance syntax:
-
-```ts
-class Base {
-	field: Type
-}
-
-class Derived extends Base {
-	// Inherits field from Base
-	// Can add more fields and methods
-}
-```
+💰 Use `extends` to inherit fields and methods from a base class.
 
 💰 Don't forget to call `super()` in the constructor if the parent has a
 constructor.
