feat: add private fields and default parameters to classes, update README and tests

--- a/exercises/01.classes/FINISHED.mdx
+++ b/exercises/01.classes/FINISHED.mdx
@@ -7,7 +7,8 @@ You learned:
 - 📦 **Fields** store data on instances
 - 🔧 **Methods** define behavior
 - 🏗️ **Constructors** initialize new instances
-- ⚡ **Parameter properties** as a shorthand
+- 🔒 **Private fields** (`#`) encapsulate internal state
+- ⚙️ **Default parameters** make constructors flexible
 
 🦉 Classes vs plain objects: Use classes when you need:
 
