--- a/exercises/README.mdx
+++ b/exercises/README.mdx
@@ -8,7 +8,7 @@ combine data and behavior. TypeScript makes OOP powerful with its type system.
 
 We'll cover:
 
-1. **Classes** - Fields, methods, constructors, and private fields
+1. **Classes** - Fields, methods, constructors, private fields, and defaults
 2. **Interfaces and Classes** - Implementing contracts
 3. **Inheritance** - Extending classes and overriding methods
 4. **Polymorphism** - Substitutability and why it matters
