feat: update OOP exercises with enhanced class structures, method overrides, and improved README documentation

--- a/exercises/03.inheritance-and-polymorphism/02.problem.method-overriding/README.mdx
+++ b/exercises/03.inheritance-and-polymorphism/02.problem.method-overriding/README.mdx
@@ -3,11 +3,13 @@
 👨‍💼 Now let's add methods to our shape hierarchy. Each shape will override a
 method to provide its own implementation.
 
+The `Shape`, `Circle`, and `Rectangle` classes from the previous exercise are
+already defined. You'll add and override the `getArea()` method.
+
 🐨 Open <InlineFile file="index.ts" /> and:
 
 1. Add a `getArea()` method to `Shape` that returns 0
 2. Override `getArea()` in `Circle` to return π × radius²
 3. Override `getArea()` in `Rectangle` to return width × height
-4. Optionally use `super` to call the parent method
 
 📜 [TypeScript Handbook - Overriding Methods](https://www.typescriptlang.org/docs/handbook/2/classes.html#overriding-methods)
